# starkbank-test

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  conftest.py  docker-compose.yaml  docker-entrypoint.sh  manage.py  pyproject.toml
.github/workflows/: ci.yaml
ddd/domain/: __init__.py  invoice.py  transfer.py
ddd/use_cases/: __init__.py  create_invoice.py  create_transfer.py  handle_invoice_event.py  parse_event.py
infrastructure/charts/starkbank/: Chart.yaml  values.yaml
infrastructure/charts/starkbank/templates/: starkbank.yaml
infrastructure/terraform/: .gitignore  .terraform.lock.hcl  main.tf  outputs.tf  variables.tf
payments/: exceptions.py  tasks.py  urls.py  views.py
payments/services/: __init__.py  starkbank.py
payments/tests/: test_starkbank.py  test_webhook.py
starkbank_backend/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
